---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/examples/misc-1.prql
---
from club_ratings
filter rating != null
group year (
  derive [rating_norm = rating - ( average rating ) / ( stddev rating )]
)



